1925.	[port]		All outer level AC_TRY_RUNs need cross compiling
			defaults. [RT #15469]

1924.	[port]		libbind: hpux ia64 support. [RT #15473]

1923.	[bug]		ns_client_detach() called too early. [RT #15499]

1922.	[bug]		check-tool.c:setup_logging() missing call to
			dns_log_setcontext().

1921.	[bug]		Client memory contexts were not using internal
			malloc. [RT# 15434]

1920.	[bug]		The cache memory context array was too small to
			have the desired performance characteristics.
			[RT #15454]

1919.	[placeholder]	rt15441

1918.	[bug]		Memory leak when checking acls. [RT #15391]

1917.	[doc]		funcsynopsisinfo wasn't being treated as verbatim
			when generating man pages. [RT #15385]

1916.	[func]		Integrate contibuted IDN code from JPNIC. [RT #15383]

1915.	[bug]		dig +ndots was broken. [RT #15215]

1914.	[protocol]	DS is required to accept mnemonic algorithms
			(RFC 4034).  Still emit numeric algorithms for
			compatability with RFC 3658. [RT #15354]

1913.	[func]		Integrate contibuted DLZ code into named. [RT #11382]

1912.	[port]		aix: atomic locking for powerpc. [RT #15020]

1911.	[bug]		Update windows socket code. [RT #14965]

1910.	[bug]		dig's +sigchase code overhauled. [RT #14933]

1909.	[bug]		The DLV code has been re-worked to make no longer
			query order sensitive. [RT #14933]

1908.	[func]		dig now warns if 'RA' is not set in the answer when
			'RD' was set in the query.  host/nslookup skip servers
			that fail to set 'RA' when 'RD' is set unless a server
			is explicitly set.  [RT #15005]

1907.	[func]		host/nslookup now continue (default)/fail on SERVFAIL.
			[RT #15006]

1906.	[func]		dig now has a '-q queryname' and '+showsearch' options.
			[RT #15034]

1905.	[bug]		Strings returned from cfg_obj_asstring() should be
			treated as read-only.  The prototype for 
			cfg_obj_asstring() has been updated to reflect this.
			[RT #15256]

1904.	[func]		Automatic empty zone creation for D.F.IP6.ARPA and